--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ header nav ul {
 }
 header nav li {
     list-style: none;
+    display: inline-block
 }
 header nav li a {
     color: white;
@@ -66,7 +67,7 @@ section h2 {
 
 /* ELEMENTI NEL MAIN - ARTICLE */
 h1 {
-    font-size: 2.6rem;
+    font-size: 3.6rem;
     font-weight: bold;
     letter-spacing: -0.03em;
     margin-bottom: 0.7em;
@@ -129,6 +130,11 @@ tbody tr:last-of-type {
     border-bottom: 2px solid #3f6bca;
 }
 
+/* SECTION */
+section h2{
+    background-color: #a7a6a6;
+}
+
 /* FORM */
 input {
     padding: 5px;
@@ -177,4 +183,79 @@ footer {
 }
 footer a {
     color: fuchsia;
+}
+
+@media screen and (min-width: 768px) {
+    article h2 {
+        font-weight: bold;
+    }
+    table {
+        margin-inline: auto;
+    }
+    input {
+        padding: 10px;
+        width: 60%;
+    }
+    button {
+        padding: 8px 14px;
+        
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    body { 
+        font-size: 2.2rem;
+        line-height: 1.8;
+        padding: 15px;
+    }
+    article h1 {
+        font-size: 5rem;;
+    }
+    header {
+        text-align: unset;
+        padding: 1em 1em;
+    }
+    header div {
+        display: inline-block;
+    }
+    header div img {
+        display: inline-block;
+        margin-bottom: unset;
+    }
+    header div p {
+        display: inline-block;
+        margin-bottom: unset;
+    }
+    header nav {
+        display: inline-block;  
+        margin-left: 20%;
+    }
+    table {
+        width: 65%;
+        margin-block: 100px;
+    }
+    iframe {
+        display: inline-block;
+        width: 48%;
+        margin-bottom: unset;
+        
+    }
+    section {
+        display: inline-block;
+        width: 48%;
+        margin-bottom: unset;
+        border-radius: 20px;
+        
+    }
+    aside div {
+        display: inline-block;
+        width: 33%;
+        margin-left: -4px;
+    }
+    aside h2{
+        margin-top: 20px;
+    }
+    footer {
+        padding-block: 50px;
+    }
 }
