--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ section h2 {
 
 /* ELEMENTI NEL MAIN - ARTICLE */
 h1 {
-    font-size: 3.6rem;
+    font-size: 2.6rem;
     font-weight: bold;
     letter-spacing: -0.03em;
     margin-bottom: 0.7em;
@@ -247,10 +247,13 @@ footer a {
         border-radius: 20px;
         
     }
+    aside {
+        margin-inline: auto;
+    }
     aside div {
         display: inline-block;
         width: 33%;
-        margin-left: -4px;
+        margin-left: -8px;
     }
     aside h2{
         margin-top: 20px;
